--- a/package.json
+++ b/package.json
@@ -18,8 +18,6 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@types/pdf-parse": "^1.1.5",
-    "pdf-parse": "^1.1.1",
-    "pdf2json": "^3.1.6"
+    "@types/pdf-parse": "^1.1.5"
   }
 }
